--- a/docker/main/Dockerfile
+++ b/docker/main/Dockerfile
@@ -277,7 +277,8 @@ RUN npm install
 
 COPY web/ ./
 RUN npm run build \
-    && mv dist/BASE_PATH/monacoeditorwork/* dist/assets/ \
+    && mkdir -p dist/assets/monacoeditorwork \
+    && mv dist/BASE_PATH/monacoeditorwork/* dist/assets/monacoeditorwork/ \
     && rm -rf dist/BASE_PATH
 
 # Collect final files in a single layer
